# NemoLib

./: .gitignore  README.md  README.txt  notes_week2
NemoLib/: CUDA_RandomGraphGenerator.hpp  Config.hpp  ESU.h  ESU_Parallel.hpp  Global.hpp  Graph.cpp  Graph.h  Makefile  Makefile_old  NautyLink.cpp  NautyLink.h  Parallel_RandGraphAnalysis.hpp  README.txt  RandESU.cpp  RandESU.h  RandomGraphAnalysis.cpp  RandomGraphAnalysis.h  RandomGraphGenerator.cpp  RandomGraphGenerator.h  Source.cpp  StatisticalAnalysis.cpp  StatisticalAnalysis.h  Stats.hpp  Subgraph.h  Subgraph.hpp  SubgraphCount.h  SubgraphCount.hpp  SubgraphEnumerationResult.h  SubgraphProfile.cpp  SubgraphProfile.h  Utility.hpp  cmp_nemo.py  graph64.hpp  meson.build  test_input.txt
NemoLib/ThreadPool/: ThreadPool.hpp  meson.build
NemoLib/include/: CUDA_RandomGraphGenerator.hpp  Config.hpp  ESU.h  ESU.hpp  ESU_Parallel.hpp  Global.hpp  Graph.hpp  LabelGProvider.hpp  Logger.hpp  NautyLink.h  NautyLink.hpp  Parallel_RandGraphAnalysis.hpp  RandESU.h  RandESU.hpp  RandomGraphAnalysis.hpp  RandomGraphGenerator.hpp  Stats.hpp  Subgraph.hpp  SubgraphCollection.hpp  SubgraphCount.hpp  SubgraphEnumerationResult.h  SubgraphEnumerationResult.hpp  SubgraphProfile.h  SubgraphProfile.hpp  ThreadPool.hpp  Utility.hpp  meson.build
NemoLib/main/: Source.cpp  meson.build  nemocollection.cpp  nemolib.cpp
NemoLib/nauty/: Makefile  gtools.c  gtools.h  meson.build  naututil.h  nauty.h
NemoLib/nauty/include/: meson.build
NemoLib/nauty/src/: meson.build
NemoLib/src/: Graph.cpp  NautyLink.cpp  RandESU.cpp  RandomGraphAnalysis.cpp  RandomGraphGenerator.cpp  SubgraphProfile.cpp  meson.build
NemoLib/subprojects/: loguru.wrap
ThreadPool/: ThreadPool.hpp
UserGuide/: VisualStudioSetup.md
nauty26r12/: NRswitchg  addedgeg  amtog  biplabg  catg  complg  converseg  copyg  cubhamg  deledgeg  delptg  directg  dreadnaut  dretodot  dretog  genbg  genbgL  geng  genquarticg  genrang  genspecialg  gentourng  gentreeg  gtools.c  gtools.h  hamheuristic  labelg.c  linegraphg  listg  multig  newedgeg  pickg  planarg  ranlabg  shortg  showg  showg.c  subdivideg  test.txt  twohamg  (+2 more)
rand_graph/: CUDA_Shuffler.hpp  Shuffle_Kernels.cu  libgpu.lib
