install_headers('Config.hpp', 
                'CUDA_RandomGraphGenerator.hpp',
                'ESU_Parallel.hpp', 
                'ESU.h', 
                'Global.hpp',
                'Graph.h', 
                'graph64.hpp',
                'NautyLink.h', 
                'Parallel_RandGraphAnalysis.hpp', 
                'RandESU.h', 
                'RandomGraphAnalysis.h',
                'RandomGraphGenerator.h', 
                'Stats.hpp',  
                'Subgraph.hpp', 
                'SubgraphCount.hpp', 
                'SubgraphEnumerationResult.h',
                'SubgraphProfile.h',
                'ThreadPool.hpp',
                'Utility.hpp')
