install_headers(
    'Config.hpp', 
    'CUDA_RandomGraphGenerator.hpp',
    'ESU_Parallel.hpp', 
    'ESU.hpp', 
    'Global.hpp',
    'Graph.hpp', 
    'graph64.hpp',
    'LabelGProvider.hpp',
    'NautyLink.hpp', 
    'Parallel_RandGraphAnalysis.hpp', 
    'RandESU.hpp', 
    'RandomGraphAnalysis.hpp',
    'RandomGraphGenerator.hpp', 
    'Stats.hpp',  
    'Subgraph.hpp', 
    'SubgraphCount.hpp', 
    'SubgraphEnumerationResult.hpp',
    'SubgraphProfile.hpp',
#   'ThreadPool.hpp',
    'Utility.hpp'
)
