
test_bin = executable(
    'nemolib', 
    'nemolib.cpp',
    include_directories: [
        inc, 
        inc_tp
    ],
    dependencies: [
        thread_dep, 
        nemolib_dep
    ]
)

cli_bin = executable(
    'nemocollection', 
    'nemocollection.cpp',
    include_directories: [
        inc, 
        inc_tp
    ],
    dependencies: [
        thread_dep, 
        nemolib_dep
    ]
)
