
nemolib_bin = executable(
    'nemolib', 
    'nemolib.cpp',
    include_directories: [
        inc, 
        inc_tp
    ],
    dependencies: [
        thread_dep, 
        nemolib_dep,
        loguru_dep
    ]
)

nemocollection_bin = executable(
    'nemocollection', 
    'nemocollection.cpp',
    include_directories: [
        inc, 
        inc_tp
    ],
    dependencies: [
        thread_dep, 
        nemolib_dep,
        loguru_dep
    ]
)
