nauty_sources = [
    'nautil.c',
    'naututil.c',
    'sorttemplates.c',
    'naugraph.c',
    'nausparse.c',
    'nautinv.c',
    'schreier.c',
    'gtools.c',
    'naurng.c',
    'nauty.c'
]

nauty_lib = shared_library('nauty_lib',
                           nauty_sources,
                           include_directories : nauty_inc,
                           install : true)
